Refactoring dependency tool.
Now that the concept worked, I've refactored the code in classes and
using a predictable flow.

--- a/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
+++ b/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyBuilder.cs" />
+    <Compile Include="JsParser.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Namespace.cs" />
     <Compile Include="Program.cs" />
