--- a/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
+++ b/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyBuilder.cs" />
+    <Compile Include="FileManifest.cs" />
     <Compile Include="JsParser.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Namespace.cs" />
