Some changes on the dependency builder
Now the DependencyUsageMap.js includes all dependencies for each file,
instead of having to recursively search the dependencies across the
file...

--- a/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
+++ b/tools/joopl.dependencymap/joopl.dependencybuilder/joopl.dependencybuilder.csproj
@@ -52,7 +52,7 @@
     <Compile Include="FileManifest.cs" />
     <Compile Include="JsParser.cs" />
     <Compile Include="Type.cs" />
-    <Compile Include="TypeRef.cs" />
+    <Compile Include="FileManifestRef.cs" />
     <Compile Include="Namespace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
