--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-qunit": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-yuidoc": "~0.5.0",
@@ -18,6 +19,9 @@
     "walk": "~2.2.1",
     "watchr": "~2.4.4",
     "path": "~0.4.9",
-    "grunt-contrib-qunit": "~0.3.0"
+    "nodeunit": "~0.8.2"
+  },
+  "scripts": {
+    "test": "grunt qunit nodeunit"
   }
 }
