Basic GruntJS Analyzer task (work in progress...!!)
jOOPL Analyzer will be callable using a GruntJS task. This will be part
of Travis-CI in the next days, so NodeUnit tests will be executed after
jOOPL Analyzer analyzes the test hierarchy!

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ doc/
 node_modules/*
 node_modules/joopl-analyzer/node_modules/*
 !/node_modules/joopl-analyzer
+!/node_modules/grunt-joopl-analyzer
+node_modules/grunt-joopl-analyzer/node_modules/*
