--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "jOOPL is simply powerful OOP for the JavaScript language, both in Web browsers and runtimes like NodeJS!",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-run-grunt": "~0.1.3",
     "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-nodeunit": "~0.2.2",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-yuidoc": "~0.5.0",
@@ -22,6 +23,6 @@
     "nodeunit": "~0.8.2"
   },
   "scripts": {
-    "test": "grunt qunit nodeunit"
+    "test": "grunt qunit"
   }
 }
