--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ node_modules/*
 node_modules/joopl-analyzer/node_modules/*
 !/node_modules/joopl-analyzer
 !/node_modules/grunt-joopl-analyzer
+/node_modules/grunt-joopl-analyzer/node_modules/*
